add gql service, qgl controller, gql scheme

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: country
+  graphql:
+    graphiql:
+      enabled: true
   datasource:
     username: postgres
     password: secret
