--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.flywaydb:flyway-core:10.17.1'
 	implementation 'org.flywaydb:flyway-database-postgresql:10.17.1'
+	implementation 'org.springframework.boot:spring-boot-starter-graphql'
+	implementation 'com.tailrocks.graphql:graphql-datetime-spring-boot-starter:6.0.0'
+	implementation 'org.springframework.data:spring-data-commons'
+	annotationProcessor 'org.projectlombok:lombok:1.18.38'
+	compileOnly 'org.projectlombok:lombok:1.18.38'
 }
 
 tasks.named('test') {
