--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.google.protobuf' version '0.9.4'
+	id 'com.github.edeandrea.xjc-generation' version '1.6'
 }
 
 group = 'guru.qa'
@@ -40,11 +41,34 @@ dependencies {
 	implementation 'org.springframework.grpc:spring-grpc-spring-boot-starter'
 	implementation "com.google.protobuf:protobuf-java-util:${dependencyManagement.importedProperties['protobuf-java.version']}"
 	implementation 'io.grpc:grpc-services'
+	implementation 'wsdl4j:wsdl4j:1.6.3'
+	xjc 'org.glassfish.jaxb:jaxb-xjc:4.0.5'
 	runtimeOnly 'org.postgresql:postgresql:42.7.3'
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+xjcGeneration {
+	defaultAdditionalXjcOptions = ['encoding': 'UTF-8']
+	schemas {
+		wsdlSchema {
+			schemaRootDir = "$projectDir/src/main/resources"
+			schemaFile = 'country.xsd'
+			javaPackageName = 'guru.qa.xml.country'
+			sourceSet = 'main'
+		}
+	}
+}
+
+sourceSets {
+	main {
+		java {
+			srcDir('src/main/java')
+			srcDir("$buildDir/generated-sources/main/xjc")
+		}
+	}
 }
 
 protobuf {
